@@ -1,6 +1,7 @@
 2021-11-04 Shuwei Ye <yesw@bnl.gov>
   * Added pilot2-prmon.tgz to allow run prmon (memory monitor) Rubin jobs
   * Added pilots_starter-prmon.py to download pilot2-prmon.tgz
+  * Added runpilot2-wrapper-prmon.sh to set pilot option --pilot-user=rubin
   * Many missing docs for the changes between 2021-05-13 and 2021-11-04
 
 2021-05-13 Shuwei Ye <yesw@bnl.gov>
